Added comparison operators. In the polyline class , the constructor was overloaded , filling it with points with random coordinates

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -18,4 +18,4 @@ if(MSVC)
 endif()
 
 # Объявляем исполняемый файл
-add_executable(main "src/main.cc")
+add_executable(main "src/main.cc" "include/random.h")
