bug fixes and code styling. Adding an operator != for point and polyline classes

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,12 +4,9 @@ project(Polyline CXX)
 
 set(CMAKE_CXX_STANDARD 23)
 
-# Специфичные настройки для компилятора Visual Studio
 if(MSVC)
-    # Генерируем статическую заглушку для динамических библиотек
     set(CMAKE_WINDOWS_EXPORT_ALL_SYMBOLS true)
 
-    # Включаем высокий уровень предупреждений
     if(CMAKE_CXX_FLAGS MATCHES "/W[0-4]")
         string(REGEX REPLACE "/W[0-4]" "/W4" CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS}")   
     else()
@@ -17,5 +14,4 @@ if(MSVC)
     endif()
 endif()
 
-# Объявляем исполняемый файл
-add_executable(main "src/main.cc" "include/random.h")
+add_executable(main "src/main.cc")
